<resources>
    <string name="app_name">Wagba</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="no_carts">No carts available!</string>
    <string name="register">Register?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="username">Username</string>
    <string name="currency">EGP</string>
    <string name="welcome">Welcome!</string>
    <string name="Add_to_cart">Add to cart</string>
    <string name="confirm">Confirm</string>
    <string name="Add">Add</string>
    <string name="delivery_cost">Delivery:   </string>
    <string name="total_cost">Total:   </string>
    <string name="Remove">Remove</string>
    <string name="Delete">Delete Cart</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_restaurant">Find restaurant…</string>
    <string name="find_cart">Find in cart…</string>
    <string name="cart_name">\'s Cart</string>
    <string name="find_order">Find order…</string>
    <string name="find_meal">Find meal…</string>
    <string name="gad">GAD</string>
    <string name="gate3">Gate 3</string>
    <string name="gate4">Gate 4</string>
    <string name="noon">12:00</string>
    <string name="afternoon">3:00</string>
    <string name="dummy_rest_name">Restaurant Name</string>
    <string name="dummy_number">01100658646</string>
    <string name="dummy_num">5</string>
    <string name="dummy_meal_name">Meal Name</string>
    <string name="dummy_desc">Description description description description description description…</string>
    <string name="dummy_date">11-12-2022 02:09:07</string>
    <string name="dummy_price">50 L.E.</string>
    <string name="dummy_availability">Available</string>
    <string name="dummy_item_count">5 items</string>
    <string name="dummy_total">350 L.E.</string>
    <string name="dummy_delivery">10 L.E.</string>
    <string name="dummy_delivery_status">Delivered</string>
    <string name="dummy_pay_status">Paid</string>
    <string name="title_activity_payment">Payment_Activity</string>
</resources>