<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignOptionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal|fill_vertical"
            android:text="@string/welcome"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:alpha="0.75"
            android:backgroundTint="@color/teal_200"
            android:padding="10dp"
            android:text="@string/action_sign_in_short"
            android:textSize="24sp" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:alpha="0.75"
            android:backgroundTint="@color/teal_200"
            android:padding="10dp"
            android:text="@string/action_sign_up_short"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>